Criado Modelo ER
Criado arquivo para o modelo entidade relacionamento

Co-Authored-By: eduardoback7 <eduardoback7@users.noreply.github.com>
Co-Authored-By: Helimar Baggattini <helibaggattini@users.noreply.github.com>
Co-Authored-By: martinwink <martinwink@users.noreply.github.com>

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/StockManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jssc-2.8.0-arduino2.jar=C:\\Program Files (x86)\\Arduino\\lib\\jssc-2.8.0-arduino2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.jssc-2.8.0-arduino2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=main.serial
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
