--- a/pom.xml
+++ b/pom.xml
@@ -105,4 +105,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.4.Final</version>
+        </dependency>
+    </dependencies>
+
 </project>
