--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/stockmanager?useTimezone=true&serverTimezone=UTC
 db.user=root
-db.senha=bruchjulio
+db.senha=
