template das configurações do Hibernate
Arquivo de template das configurações da conexão do hibernate com a  base de dados

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ nbdist/
 
 # End of https://www.gitignore.io/api/maven,netbeans,intellij
 !/src/main/resources/META-INF/persistence.xml
+/src/main/resources/META-INF/HIbernate.cfg.xml
