--- a/src/main/resources/META-INF/HIbernate.cfg.xml.template
+++ b/src/main/resources/META-INF/HIbernate.cfg.xml.template
@@ -22,7 +22,62 @@
         <property name="current_session_context_class">thread</property>
 
         <!-- Disable the second-level cache  -->
-        <property name="cache.provider_class">org.hibernate.cache.internal.NoCacheProvider</property>
+        <?xml version='1.0' encoding='utf-8'?>
+        <!DOCTYPE hibernate-configuration PUBLIC
+                "-//Hibernate/Hibernate Configuration DTD 3.0//EN"
+                "http://www.hibernate.org/dtd/hibernate-configuration-3.0.dtd">
+
+        <hibernate-configuration>
+            <session-factory>
+
+                <!-- SQL dialect -->
+                <property name="dialect">org.hibernate.dialect.MySQLDialect</property>
+
+                <!-- Database connection settings -->
+                <property name="hibernate.connection.driver_class">org.gjt.mm.mysql.Driver</property>
+                <property name="connection.driver_class">com.mysql.jdbc.Driver</property>
+                <property name="connection.url">jdbc:mysql://localhost:3306/database?useTimezone=true&amp;serverTimezone=UTC</property>
+                <property name="connection.username">user</property>
+                <property name="connection.password">password</property>
+
+        <!--        &lt;!&ndash; JDBC connection pool (use the built-in) &ndash;&gt;-->
+        <!--        <property name="connection.pool_size">1</property>-->
+
+        <!--        &lt;!&ndash; Enable Hibernate's automatic session context management &ndash;&gt;-->
+        <!--        <property name="current_session_context_class">thread</property>-->
+
+        <!--        &lt;!&ndash; Disable the second-level cache  &ndash;&gt;-->
+        <!--        <property name="cache.provider_class">org.hibernate.cache.internal.NoCacheProvider</property>-->
+
+        <!--        &lt;!&ndash; Echo all executed SQL to stdout &ndash;&gt;-->
+        <!--        <property name="show_sql">true</property>-->
+        <!--        <property name="format_sql">true</property>-->
+
+                <property name="hibernate.connection.autocommit">false</property>
+                <property name="hbm2ddl.auto">update</property>
+
+                <!-- mapeamento das entidades -->
+                <mapping class="com.yard.stockmanager.persistence.entity.Agendamento" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Categoria" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Cidade" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Departamento" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Endereco" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Estoque" />
+                <mapping class="com.yard.stockmanager.persistence.entity.EstoqueHasProduto" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Funcionario" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Marca" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Nfe" />
+                <mapping class="com.yard.stockmanager.persistence.entity.NfeHasProduto" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Pessoa" />
+                <mapping class="com.yard.stockmanager.persistence.entity.PessoaHasTelefones" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Produto" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Telefones" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Tipo" />
+                <mapping class="com.yard.stockmanager.persistence.entity.Unidade" />
+
+
+            </session-factory>
+        </hibernate-configuration><property name="cache.provider_class">org.hibernate.cache.internal.NoCacheProvider</property>
 
         <!-- Echo all executed SQL to stdout -->
         <property name="show_sql">true</property>
@@ -31,7 +86,23 @@
         <property name="hbm2ddl.auto">update</property>
 
         <!-- mapeamento das entidades -->
-        <mapping class="persistence.entity.Funcionario" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Agendamento" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Categoria" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Cidade" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Departamento" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Endereco" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Estoque" />
+        <mapping class="com.yard.stockmanager.persistence.entity.EstoqueHasProduto" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Funcionario" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Marca" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Nfe" />
+        <mapping class="com.yard.stockmanager.persistence.entity.NfeHasProduto" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Pessoa" />
+        <mapping class="com.yard.stockmanager.persistence.entity.PessoaHasTelefones" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Produto" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Telefones" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Tipo" />
+        <mapping class="com.yard.stockmanager.persistence.entity.Unidade" />
 
 
     </session-factory>
