Optimização de imports
atualização do nome do objeto e seus imports na tela de login

--- a/.gitignore
+++ b/.gitignore
@@ -106,5 +106,5 @@ nbdist/
 .nb-gradle/
 
 # End of https://www.gitignore.io/api/maven,netbeans,intellij
-!/src/main/resources/META-INF/persistence.xml
 /src/main/resources/hibernate.cfg.xml
+/src/main/resources/META-INF/hibernate.cfg.xml
