Implementação do modulo de envio de emails
criação de um metodo estático para o envio de emails de notificação

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.17</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 
 </project>
