--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,8 +5,8 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: [windows-latest]
+    
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 1.8
