--- a/pom.xml
+++ b/pom.xml
@@ -162,5 +162,10 @@
             <version>2.5.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 </project>
