melhorias na classe Mail
melhoria nos atributos necessarios na classe Mail e modificação do código para que seja possivel enviar anexos

--- a/.gitignore
+++ b/.gitignore
@@ -192,9 +192,9 @@ nbdist/
 
 # End of https://www.gitignore.io/api/maven,netbeans,intellij
 /src/main/resources/hibernate.cfg.xml
-/src/main/resources/hibernate.cfg.xml
 *.log
 *.ick
 logs.log.lck
 .idea/codeStyles/Project.xml
 StockManager.iml
+/src/main/resources/hibernate.properties
